--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,5 +1,10 @@
+/* 
+  Difference between 22% and 22 vw:
+    %: 22% of the container
+    vw: 22% of the total window
+*/
 .collection-item {
-  width: 22%;
+  width: 22vw;
   display: flex;
   flex-direction: column;
   height: 350px;
